--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^11.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2"
+    "react-hook-form": "^7.53.2",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
